# drapht

./: README.md  api_requests.py  data_teams  drapht.db  drapht.py  drapht_data.py  explore.ipynb  extract.py  gwfga.py  pyproject.toml  refresh.sh  requirements.txt  standings.csv  transform.py
.devcontainer/: devcontainer.json
data/: bench_pts.csv  blunders_1.csv  blunders_10.csv  blunders_11.csv  blunders_12.csv  blunders_13.csv  blunders_14.csv  blunders_15.csv  blunders_16.csv  blunders_17.csv  blunders_18.csv  blunders_19.csv  blunders_2.csv  blunders_20.csv  blunders_21.csv  blunders_22.csv  blunders_23.csv  blunders_24.csv  blunders_25.csv  blunders_26.csv  blunders_27.csv  blunders_28.csv  blunders_29.csv  blunders_3.csv  blunders_30.csv  blunders_31.csv  blunders_32.csv  blunders_33.csv  blunders_34.csv  blunders_35.csv  blunders_36.csv  blunders_37.csv  blunders_4.csv  blunders_5.csv  blunders_6.csv  blunders_7.csv  blunders_8.csv  blunders_9.csv  bootstrap-dynamic.json  bootstrap-static.json  (+17 more)
data/team_218851/: history.csv
data/team_218961/: history.csv
data/team_219160/: history.csv
data/team_229056/: history.csv
data/team_230738/: history.csv
data/team_249496/: history.csv
test/: test.ipynb
