[tool.poetry]
name = "drapht"
version = "0.1.0"
description = "Fantasy Draft Analysis App"
authors = ["Danial Azam <dazam92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.4"
duckdb = "^0.9.2"
fastapi = "^0.105.0"
Flask = "^3.0.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
